fixed a bug with wierd text wrapping on homepage

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -212,9 +212,6 @@ h6, .h6{
   margin-left:15px;
   margin-right:15px;
 }
-.app-nav{
-  width:90em;
-}
 #background{
   position: fixed;
   top: 50%;
@@ -295,4 +292,3 @@ h6, .h6{
   filter:brightness(50%);
 
 }
-
